<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/transfagaran3"
    tools:context=".Login">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_log"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        >

        <!-- TextView para el título centrado -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombreApp"
            android:textColor="@color/azul"
            android:textSize="40sp"
            android:layout_gravity="center" />

    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="368dp"
        android:layout_height="200dp"
        android:contentDescription="@string/imgLogo"
        android:src="@drawable/iconoromania2" />

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtLogin"
        android:textColor="@color/white"
        android:background="@color/azul_claro"
        android:textSize="35dp"
        android:gravity="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtUsuario_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usuario_log"
            android:textColor="@color/black"
            android:background="@color/gris_claro"
            android:textSize="20dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPassword_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_log"
            android:background="@color/gris_claro"
            android:textColor="@color/black"
            android:textSize="20dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnLogin"
        android:textSize="20dp"
        android:backgroundTint="@color/azul_claro"/>

    <TextView
        android:id="@+id/linkRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20dp"
        android:textColor="@color/azul"
        android:textStyle="bold"
        android:text="@string/linkRegistro" />

    </LinearLayout>
</LinearLayout>